# HarmonyosRustDemo

./: README.md
MyOhosRustDemo/: oh-package.json5
MyOhosRustDemo/AppScope/: app.json5
MyOhosRustDemo/AppScope/resources/base/element/: string.json
MyOhosRustDemo/entry/src/main/cpp/: CMakeLists.txt  hello.cpp  my_rust_lib.h
MyOhosRustDemo/entry/src/main/ets/pages/: Index.ets
MyRustLib/: Cargo.toml  my_rust_lib.h
MyRustLib/src/: lib.rs
